--- a/ocean_layers/css/style.css
+++ b/ocean_layers/css/style.css
@@ -23,4 +23,11 @@ h2{
 p{
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
+  text-align: justify;
+}
+
+li {
+  color: white;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
 }
